fixed display on smaller screens

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -136,3 +136,7 @@ table.dataTable tfoot th {
 .dl-horizontal.long-dt dd {
   margin-left: 220px;
 }
+
+.row {
+  min-width: 0;
+}
